# kredits-mq

./: CMakeLists.txt  LICENSE  README.md  TODO.txt  libkreditsmq.pc.in
cmake/local-libzmq/: LocalLibzmq.cmake
debian/: changelog  control
kreditsmq/: auth.cpp  bt_serialize.cpp  bt_serialize.h  hex.h  jobs.cpp  kreditsmq-internal.h  string_view.h  version.h.in
lokimq/: auth.h  batch.h  connections.cpp  connections.h  lokimq.cpp  lokimq.h  message.h  proxy.cpp  worker.cpp
tests/: CMakeLists.txt  common.h  test_batch.cpp  test_commands.cpp  test_connect.cpp  test_failures.cpp  test_requests.cpp  test_string_view.cpp
